--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="banner">
+<h1>BE PART OF THE BEST ASTRONOMIC EXPERIENCE</h1>
+<h2>Discovery your personal cosmic guidance</h2>
+<p>Daily horoscope and tarot reading powered by AI</p>
+<%= link_to "Register FOR FREE", new_user_session_path, class: "btn btn-lg btn-primary"%>
+  </div>
+</div>
