--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  // Dimensiones
+  // Dimensiones toda la pantalla
   min-height: 100vh;
   width: 100%;
 
@@ -11,7 +11,11 @@
   gap: 3rem;
   padding: 2rem;
   background-color: $gray;
-  background-image: url('background_home.jpg');
+  background-image:
+  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  image-url('background_home.jpg');
+
+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -25,9 +29,6 @@
     line-height: 1.2;
     max-width: 900px;
 
-    @media (max-width: 768px) {
-      font-size: 2rem;
-    }
   }
 
 
@@ -38,24 +39,16 @@
     text-align: center;
     margin: 0;
     max-width: 800px;
-
-    @media (max-width: 768px) {
-      font-size: 1.5rem;
-    }
   }
 
 
   p {
     color: rgba(255, 255, 255, 0.9);
-    font-size: 1.3rem;
+    font-size: 1rem;
     text-align: center;
     margin: 0;
     max-width: 700px;
     line-height: 1.6;
-
-    @media (max-width: 768px) {
-      font-size: 1.1rem;
-    }
   }
 
   // Botón
