--- a/app/views/natal_charts/show.html.erb
+++ b/app/views/natal_charts/show.html.erb
@@ -9,3 +9,7 @@
 <% else %>
   <%= button_to "Generate Now", natal_chart_path, method: :post %>
 <% end %>
+
+<div class="d-grid gap-2 mt-4">
+ <%= link_to "🌟 View My Natal Chart", profile_path, class: "btn btn-primary btn-lg" %>
+</div>
