--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,13 @@
+
 <div class="banner">
-  <div class="banner">
 <h1>BE PART OF THE BEST ASTRONOMIC EXPERIENCE</h1>
 <h2>Discovery your personal cosmic guidance</h2>
 <h2>Daily horoscope and tarot reading powered by AI</h2>
 
     <% if user_signed_in? %>
-      <%= link_to "MY PROFILE", profile_path, class: "btn btn-lg btn-primary" %>
+      <%= link_to "MY FUTURE", services_path, class: "btn btn-lg btn-primary" %>
     <% else %>
       <%= link_to "REGISTER FOR FREE", new_user_registration_path, class: "btn btn-lg btn-primary" %>
     <% end %>
 
   </div>
-</div>
