new buttons plus background services

--- a/app/assets/stylesheets/components/_banner2.scss
+++ b/app/assets/stylesheets/components/_banner2.scss
@@ -11,6 +11,9 @@
   gap: 3rem;
   padding: 2rem;
   background-color: $gray;
+  background-image:
+  linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+  image-url('5.jpg');
 
 
   background-size: cover;
