--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -25,8 +25,8 @@
               <div class="card-body text-center">
                 <i class="fas fa-star fa-3x mb-3 text-warning"></i>
                 <h3 class="card-title fw-bold">Natal Chart</h3>
-               <p class="card-text">Decode the unique position of the stars at the exact moment of your birth. Understand your core personality and life challenges.</p>
-                <%= link_to " view", natal_chart_path, class: "btn btn-primary btn-lg mt-3" %>
+               <p class="card-text">Decode the unique position of the stars at the exact moment of your birth. Understand your personality and life challenges.</p>
+                <%= link_to "view", natal_chart_path, class: "btn btn-primary btn-lg mt-3" %>
               </div>
             </div>
           </div>
@@ -37,6 +37,7 @@
                 <i class="fas fa-moon fa-3x mb-3 text-info"></i>
                 <h3 class="card-title fw-bold">Daily Horoscope</h3>
                 <p class="card-text">Get actionable guidance and foresight based on the current planetary transits. Stay aligned with the universe's rhythm.</p>
+                <%= link_to "view", natal_chart_path, class: "btn btn-primary btn-lg mt-3" %>
               </div>
             </div>
           </div>
@@ -47,6 +48,7 @@
                 <i class="fas fa-hand-sparkles fa-3x mb-3 text-danger"></i>
                 <h3 class="card-title fw-bold">Tarot Readings</h3>
                 <p class="card-text">Receive clarity and answers on specific questions from the ancient wisdom of the Tarot. Navigate complex situations.</p>
+                <%= link_to "view", new_tarot_reading_path , class: "btn btn-primary btn-lg mt-3" %>
               </div>
             </div>
           </div>
