new buttons connection

--- a/app/views/natal_charts/show.html.erb
+++ b/app/views/natal_charts/show.html.erb
@@ -11,5 +11,5 @@
 <% end %>
 
 <div class="d-grid gap-2 mt-4">
- <%= link_to "🌟 View My Natal Chart", profile_path, class: "btn btn-primary btn-lg" %>
+ <%= link_to "🌟 More services", services_path, class: "btn btn-primary btn-lg" %>
 </div>
