--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -22,9 +22,9 @@
         <p><strong>🌍 Birth Country:</strong> <%= @profile.birth_country %></p>
       </div>
 
-      
+
       <div class="d-grid gap-2 mt-4">
-        <%= link_to "🌟 View My Natal Chart", natal_chart_path, class: "btn btn-primary btn-" %>
+        <%= link_to "🌟 View your future",services_path , class: "btn btn-primary " %>
       </div>
 
     </div>
