--- a/app/views/readings/show.html.erb
+++ b/app/views/readings/show.html.erb
@@ -1,3 +1,6 @@
 <div>
   <%= simple_format @reading.content %>
+        <div class="d-grid gap-2 mt-4">
+        <%= link_to "🌟 More Services",services_path , class: "btn btn-primary " %>
+      </div>
 </div>
