--- a/app/views/readings/new_tarot.html.erb
+++ b/app/views/readings/new_tarot.html.erb
@@ -16,12 +16,12 @@
                   label: "Tarot focus" %>
     </div>
 
-    <%# 🔮 BUTTON THAT DISAPPEARS WHEN PROCESSING %>
+    <%# BUTTON THAT DISAPPEARS WHEN PROCESSING %>
     <div data-loading-target="button">
       <%= f.button :submit, "Generate my tarot", class: "btn btn-primary btn-lg" %>
     </div>
 
-    <%# ✨ MAGIC UNIVERSE MESSAGE (HIDDEN UNTIL CLICK) %>
+    <%# MAGIC UNIVERSE MESSAGE (HIDDEN UNTIL CLICK) %>
     <div data-loading-target="loading"
          class="d-none mt-4 text-center"
          style="font-size: 1.5rem; color: #7A4FFF; font-weight: 600;">
