--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -37,7 +37,7 @@
                 <i class="fas fa-moon fa-3x mb-3 text-info"></i>
                 <h3 class="card-title fw-bold">Daily Horoscope</h3>
                 <p class="card-text">Get actionable guidance and foresight based on the current planetary transits. Stay aligned with the universe's rhythm.</p>
-                <%= link_to "view", natal_chart_path, class: "btn btn-primary btn-lg mt-3" %>
+                <%= link_to "view", new_horoscope_reading_path, class: "btn btn-primary btn-lg mt-3" %>
               </div>
             </div>
           </div>
