--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container my-5">
-  <h1>Your Astrological Profile</h1>
+<div class="container my-5 ">
+  <h1 style="text-align: center">Your Astrological Profile</h1>
 
   <div class="card shadow">
     <div class="card-body p-4">
@@ -24,7 +24,7 @@
 
 
       <div class="d-grid gap-2 mt-4">
-        <%= link_to "🌟 View your future",services_path , class: "btn btn-primary " %>
+        <%= link_to "🌟 View your future",services_path , class: "btn astro-button" %>
       </div>
 
     </div>
