new show tarot page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,4 +6,5 @@
 @import "banner";
 @import "banner2";
 @import "loadingstyle";
-@import "astro.scss";
+@import "astro";
+@import "tarot_reading_premium";
