--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,10 +18,10 @@
                 class: "nav-link" %>
             </li>
           <li class="nav-item">
-            <%= link_to "My future", "services", class: "nav-link" %>
+            <%= link_to "My future", services_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "My past", "dashboard", class: "nav-link" %>
+            <%= link_to "My past", dashboard_path, class: "nav-link" %>
           </li>
 
           <li class="nav-item dropdown">
