--- a/app/views/readings/show_tarot.html.erb
+++ b/app/views/readings/show_tarot.html.erb
@@ -43,14 +43,11 @@
         <span class="btn-text">Explore More Services</span>
       <% end %>
 
-      <%= link_to root_path, class: "premium-action-btn secondary" do %>
+      <%= link_to dashboard_path, class: "premium-action-btn secondary" do %>
         <span class="btn-icon">🏠</span>
-        <span class="btn-text">Back to Home</span>
+        <span class="btn-text">My Past</span>
       <% end %>
     </div>
-
   </div>
-
 </div>
-
 <% content_for :body_class, 'has-stars-canvas' %>
