--- a/app/views/readings/new_horoscope.erb
+++ b/app/views/readings/new_horoscope.erb
@@ -6,8 +6,8 @@
     </div>
 
     <%= simple_form_for @reading, url: horoscope_readings_path do |f| %>
-      <div class="astro-actions" style="text-align: center">
-        <%= f.button :submit, "Generate my horoscope", class: "astro-button" %>
+      <div class="premium-actions" style="text-align: center">
+        <%= f.button :submit, "Generate my horoscope", class: "premium-action-btn primary" %>
       </div>
     <% end %>
   </div>
