--- a/app/views/readings/new_tarot.html.erb
+++ b/app/views/readings/new_tarot.html.erb
@@ -33,10 +33,10 @@
         </div>
 
         <%# BOTÓN DE SUBMIT (TARGET) %>
-        <div class="text-center" data-loading-target="button">
+        <div class="premium-actions" style="text-align: center">
           <%= f.button :submit,
               "Generate my tarot",
-              class: "astro-button" %>
+              class: "premium-action-btn primary" %>
         </div>
 
       <% end %>
