--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,14 +1,15 @@
 <% if notice %>
-  <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
+<div class="alert alert-info custom-flash alert-dismissible fade show" role="alert">
+
     <%= notice %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
+    <button type="button" class="flash-close-btn" data-bs-dismiss="alert" aria-label="Close">
+    x</button>
   </div>
 <% end %>
 <% if alert %>
-  <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
+    <div class="alert alert-warning custom-flash alert-dismissible fade show" role="alert">
     <%= alert %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
+    <button type="button" class="flash-close-btn" data-bs-dismiss="alert" aria-label="Close">
+    x </button>
   </div>
 <% end %>
